k8s/api-gateway/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: erp-financial-services
  labels:
    app: api-gateway
    version: v1
    component: edge
spec:
  type: LoadBalancer
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 80
      targetPort: 8080
